circleCI java run

--- a/circle.yml
+++ b/circle.yml
@@ -3,5 +3,6 @@ machine:
     version: openjdk7
 test:
   post:
-    - mkdir -p $CIRCLE_TEST_REPORTS/junit/
-    - find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
+    	- mkdir -p $CIRCLE_TEST_REPORTS/junit/
+   	- find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;		
+	- java App.java
